# crypto-api

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml
src/: main.rs
src/db/: connection.rs
src/helpers/: cron.rs  mod.rs  query_parser.rs  time_formatter.rs  time_intervals.rs
src/models/: depth_history_model.rs  depths_history.rs  earning_history_model.rs  earnings_history.rs  mod.rs  rptmuh_model.rs  swap_history_model.rs  swaps_history.rs
src/routes/: depths_history.rs  earnings_history.rs  members_history.rs  mod.rs  rpmuh_history.rs  swaps_history.rs  types.rs
src/services/: depths_service.rs  earnings_service.rs  mod.rs  rpmuh_service.rs  swaps_service.rs
src/tests/: api_tests.rs  mod.rs  unit_tests.rs
